--- a/stilus/style.css
+++ b/stilus/style.css
@@ -17,6 +17,10 @@ header img{
 .nav-link{
     color:white !important;
 }
+.navbar-brand{
+    margin:0;
+    padding:0;
+}
 #nav{
     width: 100%;
     height: 10vh;
