--- a/stilus/style.css
+++ b/stilus/style.css
@@ -93,7 +93,7 @@ footer{
     width: 100%;
 }
 #tartalom{
-    height: 50vh;
+    height: fit-content;
     padding: 40px;
 }
 #aktiv{
@@ -134,8 +134,28 @@ footer{
     color: white !important;
     width: fit-content;
     margin:0 auto;
+    margin-bottom: 10px;
     font-size: 25px;
 }
 .col-md{
     margin-bottom: 10px;
+
+}
+.col-md .col{
+    text-align: center;
+}
+#gomb{
+  
+    padding: 10px;
+    color:white;
+    background-color: #383e70;
+    border-radius: 8px;
+    font-size: 20px;
+    margin-bottom: 5px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    border:0px;
+    font-weight: 400;
 }
