--- a/stilus/style.css
+++ b/stilus/style.css
@@ -73,7 +73,7 @@ header img{
 #jatekrol{
     background-color: #dddddd;
     padding: 30px;
-    margin-bottom: 80px;
+
 }
 .navbar a{
     margin-top: 2px;
@@ -231,6 +231,11 @@ footer ul li{
     color:white;
 
 }
+
+footer ul{
+    margin:0;
+    padding:0;
+}
 footer ul li{
 
     
@@ -245,7 +250,8 @@ footer ul{
     max-width: 400px;
     margin:0 auto;
     padding:30px;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 hr{
     height: 0.6px;
@@ -253,4 +259,9 @@ hr{
     width: 200px;
     margin:0 auto;
 
+
+}
+#letoltes{
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
